spec/fixtures/simple/syntax-errors/MissingSemiColon.cs
public class MissingSemiColon
{
  var x = ""
}
